* Added Greek localization (by Alex Doulamis)
* Updated Chinese localization (by Chris Yu)
* Updated Catalan localization (by Alfonso Montero)
* New option: adjust image color according background. For light background, adjusts too light colors to match background, for dark background adjusts too dark areas.
* Litres: don't fail on loading of purchased books list (for large collections).

===== 1.9.2 (Nov 02, 2013) =====
* Fixed adding of new books to the library

===== 1.9.1 (Nov 01, 2013) =====
* hi-res launcher icon
* Updated Catalan localization (by Carles Pastor i Badosa)
* Updated Czech localization (by Marek Pavelka)
* mobi: blockquote tag support
* fixed cancel menu "jump back" item behaviour: returns exactly to the old position
* fixed book info saving

===== 1.9 (Oct 14, 2013) =====
* Dictionary support
	** added OpenDictionary support (code provided by Paragon Software), better integration with SlovoEd dictionaries
	** fixed ColorDict 3 integration
	** added Lingvo integration
* Network library
	** Disable/enable separate catalogs
	** Change order of catalogs
	** Fixed unexpected 'Catalog is empty' messages
* Formats
	** mobi: added support for <div> & <mbp:pagebreak> tags
	** ePub: fixed reading of files generated from LibreOffice
	** ePub: no empty paragraphs before/after the cover
	** RTF: added unicode symbols (\u command) support
* Localizations
	** Danish localization done by Jens Kaestel, sponsored by Panacea Supplies
	** Danish hyphenation patterns imported by Dennis Sheil of Panacea Supplies
	** Added Persian localization by HYIPEDU Team
	** Added Basque localization by Ibon Idoiaga Basaras from http://librezale.org
	** Added Armenian localization by Yavruhrat, Marat Yavrumyan, Ruben Tarumian
	** Updated French localization by Mathias Monnerville
* Small features & fixes
	** Help item in the main menu (opens F.A.Q. page on the site)
	** List views scrolling speed-up (https://github.com/geometer/FBReaderJ/issues/148)
* Internal changes