@@ -121,7 +121,7 @@ public final class FBReader extends Activity {
 		}
 	};
 
-	private synchronized void openBook(Intent intent, Runnable action, boolean force) {
+	private synchronized void openBook(Intent intent, final Runnable action, boolean force) {
 		if (!force && myBook != null) {
 			return;
 		}
@@ -135,7 +135,14 @@ public final class FBReader extends Activity {
 				myBook = createBookForFile(ZLFile.createFileByPath(data.getPath()));
 			}
 		}
-		myFBReaderApp.openBook(myBook, bookmark, action);
+		myFBReaderApp.openBook(myBook, bookmark, new Runnable() {
+			public void run() {
+				if (action != null) {
+					action.run();
+				}
+				hideBars();
+			}
+		});
 	}
 
 	private Book createBookForFile(ZLFile file) {
@@ -672,7 +679,19 @@ public final class FBReader extends Activity {
 		}
 
 		if (zlibrary.DisableButtonLightsOption.getValue()) {
-			myRootView.setSystemUiVisibility(View.SYSTEM_UI_FLAG_LOW_PROFILE);
+			if (Build.VERSION.SDK_INT >= 19/*Build.VERSION_CODES.KITKAT*/) {
+				myRootView.setSystemUiVisibility(
+					View.SYSTEM_UI_FLAG_LOW_PROFILE |
+					2048 /*View.SYSTEM_UI_FLAG_IMMERSIVE*/ |
+					4096 /*View.SYSTEM_UI_FLAG_IMMERSIVE_STICKY*/ |
+					4 /*View.SYSTEM_UI_FLAG_FULLSCREEN*/ |
+					View.SYSTEM_UI_FLAG_HIDE_NAVIGATION
+				);
+			} else {
+				myRootView.setSystemUiVisibility(
+					View.SYSTEM_UI_FLAG_LOW_PROFILE
+				);
+			}
 		}
 
 		setStatusBarVisibility(false);
